// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract links > "ai startup kit home page.xml for  migrated.xml" for https://framer.com 1`] = `
"
<Container/>
  <Hero>
    <Header>
      <Stack>
        <AI_Kit_Badge nodeId="kvaze3i5">
          NEW
        </AI_Kit_Badge>
        <text nodeId="BmPmnKu3U" fontSize="82px">
          The web builder for stunning sites.
        </text>
        <text nodeId="Ga6gDXZIe" fontSize="20px">
          Design and publish modern sites at any scale with Framer’s web builder.
        </text>
        <AI_Kit_Button nodeId="rgayf1f9">
          Sign up for free
        </AI_Kit_Button>
      </Stack>
    </Header>
  </Hero>
  <Companies>
    <text nodeId="y8xplxOnV" fontSize="16px">
      Trusted by innovative companies
    </text>
    <Grid>
      <Stack>
        <Stack>
          <text nodeId="vnzxmNCxb">
            The Browser Company
          </text>
        </Stack>
      </Stack>
      <Stack>
        <Stack>
          <text nodeId="DRefZ4FzF">
            Dribbble
          </text>
        </Stack>
      </Stack>
    </Grid>
  </Companies>
  <Features>
    <Stack>
      <text nodeId="C9Wau5gv1" fontSize="32px">
        Design beautiful responsive sites with an intuitive interface.
      </text>
    </Stack>
    <Grid>
      <Card>
        <Stack>
          <text nodeId="M2ZPHDqe6" fontSize="16px">
            Design
          </text>
          <text nodeId="UMkipYqxL" fontSize="16px">
            Framer offers a design experience like Figma, complete with an infinite canvas and a full suite of layout, styling and text features.
          </text>
        </Stack>
      </Card>
      <Card>
        <Stack>
          <text nodeId="kKZ8P977O" fontSize="16px">
            Collaborate
          </text>
          <text nodeId="JxpYmedKj" fontSize="16px">
            Collaboration in Framer is seamless. Invite your team and work together in real-time.
          </text>
        </Stack>
      </Card>
      <Card>
        <Stack>
          <text nodeId="kxskj_v2Y" fontSize="16px">
            Layout &amp; Breakpoints
          </text>
          <text nodeId="HybKQJqce" fontSize="16px">
            Design your site on a familiar free-form canvas. Add flexible Grids &amp; Stacks, use absolute positioning, and work on your breakpoints to make it responsive to any screen size.
          </text>
        </Stack>
      </Card>
      <Card>
        <Stack>
          <text nodeId="Lf5rDin2b" fontSize="16px">
            Effects
          </text>
          <text nodeId="h1vQET5E8" fontSize="16px">
            Bring your site to life without code. Add effects with a few clicks and capture your audience’s attention when they land on your website.
          </text>
        </Stack>
      </Card>
    </Grid>
  </Features>"
`;

exports[`extract links > "ai startup kit home page.xml for framer.com migrated.xml" for https://framer.com 1`] = `
"<Container>
  <Hero>
    <Header>
      <Stack>
        <AI_Kit_Badge nodeId="kvaze3i5">
        </AI_Kit_Badge>
        <text>
          <_ nodeId="BmPmnKu3U" fontSize="82px">
          </_>
          <_ nodeId="Ga6gDXZIe" fontSize="20px">
          </_>
        </text>
        <AI_Kit_Button nodeId="rgayf1f9">
        </AI_Kit_Button>
      </Stack>
    </Header>
  </Hero>
  <Companies>
    <text nodeId="y8xplxOnV" fontSize="16px">
    </text>
    <Grid>
      <Stack>
        <_>
          <Stack>
            <text nodeId="vnzxmNCxb">
            </text>
          </Stack>
        </_>
        <_>
          <Stack>
            <text nodeId="DRefZ4FzF">
            </text>
          </Stack>
        </_>
      </Stack>
    </Grid>
  </Companies>
  <Features>
    <Stack>
      <text nodeId="C9Wau5gv1" fontSize="32px">
      </text>
    </Stack>
    <Grid>
      <Card>
        <_>
          <Stack>
            <text>
              <_ nodeId="M2ZPHDqe6" fontSize="16px">
              </_>
              <_ nodeId="UMkipYqxL" fontSize="16px">
              </_>
            </text>
          </Stack>
        </_>
        <_>
          <Stack>
            <text>
              <_ nodeId="kKZ8P977O" fontSize="16px">
              </_>
              <_ nodeId="JxpYmedKj" fontSize="16px">
              </_>
            </text>
          </Stack>
        </_>
        <_>
          <Stack>
            <text>
              <_ nodeId="kxskj_v2Y" fontSize="16px">
              </_>
              <_ nodeId="HybKQJqce" fontSize="16px">
              </_>
            </text>
          </Stack>
        </_>
        <_>
          <Stack>
            <text>
              <_ nodeId="Lf5rDin2b" fontSize="16px">
              </_>
              <_ nodeId="h1vQET5E8" fontSize="16px">
              </_>
            </text>
          </Stack>
        </_>
      </Card>
    </Grid>
  </Features>
</Container>"
`;

exports[`extract links > "ai startup kit home page.xml" for https://framer.com 1`] = `
"
<Container/>
  <Hero>
    <Header>
      <Stack>
        <AI_Kit_Badge nodeId="kvaze3i5">
          NEW
        </AI_Kit_Badge>
        <text nodeId="BmPmnKu3U" fontSize="82px">
          The web builder for stunning sites.
        </text>
        <text nodeId="Ga6gDXZIe" fontSize="20px">
          Design and publish modern sites at any scale with Framer’s web builder.
        </text>
        <AI_Kit_Button nodeId="rgayf1f9">
          Sign up for free
        </AI_Kit_Button>
      </Stack>
    </Header>
  </Hero>
  <Companies>
    <text nodeId="y8xplxOnV" fontSize="16px">
      Trusted by innovative companies
    </text>
    <Grid>
      <Stack>
        <Stack>
          <text href="https://thebrowser.company" nodeId="vnzxmNCxb">
            The Browser Company
          </text>
        </Stack>
      </Stack>
      <Stack>
        <Stack>
          <text href="https://dribbble.com" nodeId="DRefZ4FzF">
            Dribbble
          </text>
        </Stack>
      </Stack>
    </Grid>
  </Companies>
  <Features>
    <Stack>
      <text nodeId="C9Wau5gv1" fontSize="32px">
        Design beautiful responsive sites with an intuitive interface.
      </text>
    </Stack>
    <Grid>
      <Card>
        <Stack>
          <text nodeId="M2ZPHDqe6" fontSize="16px">
            Design
          </text>
          <text nodeId="UMkipYqxL" fontSize="16px">
            Framer offers a design experience like Figma, complete with an infinite canvas and a full suite of layout, styling and text features.
          </text>
        </Stack>
      </Card>
      <Card>
        <Stack>
          <text nodeId="kKZ8P977O" fontSize="16px">
            Collaborate
          </text>
          <text nodeId="JxpYmedKj" fontSize="16px">
            Collaboration in Framer is seamless. Invite your team and work together in real-time.
          </text>
        </Stack>
      </Card>
      <Card>
        <Stack>
          <text nodeId="kxskj_v2Y" fontSize="16px">
            Layout &amp; Breakpoints
          </text>
          <text nodeId="HybKQJqce" fontSize="16px">
            Design your site on a familiar free-form canvas. Add flexible Grids &amp; Stacks, use absolute positioning, and work on your breakpoints to make it responsive to any screen size.
          </text>
        </Stack>
      </Card>
      <Card>
        <Stack>
          <text href="https://framer.com/features/effects" nodeId="Lf5rDin2b" fontSize="16px">
            Effects
          </text>
          <text nodeId="h1vQET5E8" fontSize="16px">
            Bring your site to life without code. Add effects with a few clicks and capture your audience’s attention when they land on your website.
          </text>
        </Stack>
      </Card>
    </Grid>
  </Features>
"
`;

exports[`extract links > "ai startup kit nav.xml for  migrated.xml" for https://framer.com 1`] = `
"<AI_Kit_Nav>
  <Navigation>
    <Stack>
      <_>
        <AI_Kit_Navigation_Nav_Top_Item>
          <_ nodeId="w2keh4di">
          </_>
          <_ nodeId="f9jqiq3c">
          </_>
          <_ nodeId="ttyq47m7">
          </_>
          <_ nodeId="5mjfkk9h">
          </_>
          <_ nodeId="phn7sz8d">
          </_>
        </AI_Kit_Navigation_Nav_Top_Item>
      </_>
      <_>
        <AI_Kit_Button nodeId="koeyy0nt">
        </AI_Kit_Button>
      </_>
    </Stack>
  </Navigation>
</AI_Kit_Nav>"
`;

exports[`extract links > "ai startup kit nav.xml for framer.com migrated.xml" for https://framer.com 1`] = `
"<AI_Kit_Nav>
  <Navigation>
    <Stack>
      <_>
        <AI_Kit_Navigation_Nav_Top_Item>
          <_ nodeId="w2keh4di">
          </_>
          <_ nodeId="f9jqiq3c">
          </_>
          <_ nodeId="ttyq47m7">
          </_>
          <_ nodeId="5mjfkk9h">
          </_>
          <_ nodeId="phn7sz8d">
          </_>
        </AI_Kit_Navigation_Nav_Top_Item>
      </_>
      <_>
        <AI_Kit_Button nodeId="koeyy0nt">
        </AI_Kit_Button>
      </_>
    </Stack>
  </Navigation>
</AI_Kit_Nav>"
`;

exports[`extract links > "ai startup kit nav.xml" for https://framer.com 1`] = `
"<AI_Kit_Nav>
	<Navigation>
		<Stack>
			<AI_Kit_Navigation_Nav_Top_Item nodeId="w2keh4di">
				Features
			</AI_Kit_Navigation_Nav_Top_Item>
			<AI_Kit_Navigation_Nav_Top_Item nodeId="f9jqiq3c">
				Developers
			</AI_Kit_Navigation_Nav_Top_Item>
			<AI_Kit_Navigation_Nav_Top_Item href="example.com/brand" nodeId="ttyq47m7">
				Brand
			</AI_Kit_Navigation_Nav_Top_Item>
			<AI_Kit_Navigation_Nav_Top_Item href="example.com/blog" nodeId="5mjfkk9h">
				Blog
			</AI_Kit_Navigation_Nav_Top_Item>
			<AI_Kit_Navigation_Nav_Top_Item nodeId="phn7sz8d">
				Contact
			</AI_Kit_Navigation_Nav_Top_Item>
		</Stack>
		<Stack>
			<AI_Kit_Button nodeId="koeyy0nt">
				Sign up for free
			</AI_Kit_Button>
		</Stack>
	</Navigation>
</AI_Kit_Nav>"
`;
